[gd_scene load_steps=9 format=2]

[ext_resource path="res://Platformer/Scripts/BounceMain.gd" type="Script" id=1]
[ext_resource path="res://Platformer/Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Platformer/Scripts/Platform.gd" type="Script" id=3]
[ext_resource path="res://Platformer/Assets/UI/back.png" type="Texture" id=4]
[ext_resource path="res://Platformer/Assets/UI/next.png" type="Texture" id=5]
[ext_resource path="res://Platformer/Scenes/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Platformer/Scenes/TileMap.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]

[node name="BounceMain" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 26, 93 )
collision_mask = 6
tag = "player"

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2( 0, -21 )
collision_layer = 2
collision_mask = 13
script = ExtResource( 3 )
tag = "platform"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
position = Vector2( 512, 510 )
scale = Vector2( 70, 1 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Platform"]
visible = false
margin_left = -187.0
margin_top = 502.0
margin_right = 1215.0
margin_bottom = 542.0

[node name="Left" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0.313726 )
margin_left = 32.5355
margin_top = 374.158
margin_right = 544.536
margin_bottom = 886.158
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 4 )

[node name="Right" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0.313726 )
margin_left = 198.466
margin_top = 377.412
margin_right = 710.466
margin_bottom = 889.411
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 5 )

[node name="Jump" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0.313726 )
margin_left = 871.951
margin_top = 455.497
margin_right = 1383.95
margin_bottom = 967.497
rect_rotation = 270.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 5 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 6 )]
z_index = 2
z_as_relative = false

[node name="TileMap" parent="." instance=ExtResource( 7 )]
tile_data = PoolIntArray( 1048569, 2, 0, 1048570, 2, 0, 1048571, 2, 0, 1048572, 2, 0, 1048573, 2, 0, 1048574, 2, 0, 1048575, 2, 0, 983040, 2, 0, 983041, 2, 0, 983042, 2, 0, 983043, 2, 0, 983044, 2, 0, 983045, 2, 0, 983046, 2, 0, 983047, 2, 0, 983048, 2, 0, 983049, 2, 0, 983050, 2, 0, 983051, 2, 0, 983052, 2, 0, 983053, 2, 0, 983054, 2, 0, 983055, 2, 0, 983056, 2, 0, 983057, 2, 0, 983058, 2, 0, 983059, 2, 0, 983060, 2, 0, 983061, 2, 0, 983062, 2, 0, 983063, 2, 0, 983064, 2, 0, 983065, 2, 0, 983066, 2, 0, 983067, 2, 0, 983068, 2, 0, 983069, 2, 0, 983070, 2, 0, 983071, 2, 0, 983072, 2, 0, 983073, 2, 0, 983074, 2, 0, 983075, 2, 0, 983076, 2, 0, 983077, 2, 0 )

[connection signal="attack" from="." to="Player" method="_on_BounceMain_attack"]
[connection signal="jump" from="." to="Player" method="_on_BounceMain_jump"]
[connection signal="move_left" from="." to="Player" method="_on_BounceMain_move_left"]
[connection signal="move_right" from="." to="Player" method="_on_BounceMain_move_right"]
[connection signal="released" from="." to="Player" method="_on_BounceMain_released"]
[connection signal="get_score" from="Player" to="HUD" method="_on_Player_get_score"]
[connection signal="button_down" from="Left" to="Player" method="_on_Left_button_down"]
[connection signal="button_up" from="Left" to="Player" method="_on_Left_button_up"]
[connection signal="button_down" from="Right" to="Player" method="_on_Right_button_down"]
[connection signal="button_up" from="Right" to="Player" method="_on_Right_button_up"]
[connection signal="pressed" from="Jump" to="Player" method="_on_Jump_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
